# XM7-for-SDL

./: INSTALL  README
Doc/: 00README.txt  00README.txt~  00_INSTALL.linux  README_1ST.txt  XM7.INI.sample  XM7SRC.txt
HP/: index.html
libemugrph/: .cproject  .project  EmuAgarGL.cpp  EmuAgarGL.h  EmuGLUtils.cpp  EmuGLUtils.h  EmuGrph256kc.cpp  EmuGrph256kc.h  EmuGrph400l.cpp  EmuGrph4096c.cpp  EmuGrphLib.cpp  EmuGrphLib.h  EmuGrphScale1x1.cpp  EmuGrphScale1x1.h  EmuGrphScale1x2.h  EmuGrphScale1x2i.cpp  EmuGrphScale2x2.cpp  EmuGrphScale2x4.cpp  EmuGrphScale2x4.h  EmuGrphScale2x4i.cpp  (+3 more)
linux-sdl/: .cproject  .project  00_Tips.ja.txt  AgarKbdInterface.cpp  AgarKbdInterface.h  AudioSDL.cpp  AudioSDL.h  CMakeLists.txt  EmuGLUtils.cpp  EmuGLUtils.h  EmuGrph256kc.cpp  EmuGrph4096c.cpp  EmuGrph4096c.h  EmuGrphLib.cpp  EmuGrphLib.h  EmuGrphScale1x1.cpp  EmuGrphScale1x2.cpp  EmuGrphScale1x2.h  EmuGrphScale1x2i.cpp  EmuGrphScale2x2.cpp  EmuGrphScale2x2i.cpp  EmuGrphScale2x2i.h  EmuGrphScale2x4.cpp  EmuGrphScale2x4i.cpp  EmuGrphScale2x4i.h  EmuGrphScale4x4.cpp  EmuGrphScale4x4i.cpp  EmuGrphScale4x4i.h  GtkKbdInterface.cpp  GtkKbdInterface.h  KbdInterface.cpp  KbdInterface.h  LICENSE.en.txt  LICENSE.ja.txt  Makefile  SDLJoyInterface.cpp  SDLJoyInterface.h  SDLKbdInterface.cpp  SDLKbdInterface.h  SndDrvBeep.cpp  (+182 more)
linux-sdl/Doc/: CMakeLists.txt  xm7.ja.texinfo
linux-sdl/F-Font/: F-Font.orig.7z  README.en.txt  README.ja.txt
linux-sdl/Tool/: DISKDRV.ASM  DUMMY.D77  FMWRITE.BAT  IPL.ASM  RSDRIVER.ASM  SAVEJDIC.2BH  SAVEJDIC.ASM  SAVEKNJ.2BH  SAVEKNJ.ASM  SAVEROM.2BH  SAVEROM.ASM  SAVEROM.X86  SAVEROM2.2BH  SAVEROM7.2BH  makefile
linux-sdl/build-scripts/: g++-cross.sh  gcc-cross.sh  gcc-linker-cross.sh
linux-sdl/cmake/: config_xm7.cmake  detect_target_cpu.cmake  simd-x86.cmake
linux-sdl/cpu/m6809/: Makefile  m6809.c  m6809.h
linux-sdl/fmgen/: 00_Changes_For_XM7.txt  CMakeLists.txt  cisc.h  file.cpp  file.h  fmgen.cpp  fmgen.h  fmgeninl.h  fmtimer.h  headers.h  makefile  misc.h  opm.cpp  opm.h  opna.cpp  opna.h  psg.cpp  psg.h  types.h
linux-sdl/fmgen/fmgen-win32/: fmgen-win32.cbp  fmgen-win32.depend
linux-sdl/libemugrph/: EmuAgarGL.cpp  EmuAgarGL.h  EmuGrph256kc.cpp  EmuGrph400l.h  EmuGrphLib.cpp  EmuGrphLib.h  EmuGrphScale1x1.cpp  EmuGrphScale1x1.h  EmuGrphScale1x2.cpp  EmuGrphScale1x2.h  EmuGrphScale1x2i.cpp  EmuGrphScale1x2i.h  EmuGrphScale2x2.cpp  EmuGrphScale2x2.h  EmuGrphScale2x2i.cpp  EmuGrphScale2x2i.h  EmuGrphScale2x4.cpp  EmuGrphScale2x4.h  EmuGrphScale2x4i.cpp  EmuGrphScale2x4i.h  EmuGrphScale4x4.cpp  EmuGrphScale4x4.h  EmuGrphScale4x4i.cpp  EmuGrphScale4x4i.h  EmuGrphScaleTmpl.h  Makefile  libemugrph.cbp  libemugrph.depend  libemugrph.layout  makefile
linux-sdl/locales/C/: CMakeLists.txt  messages.mo  messages.po
linux-sdl/locales/ja/: CMakeLists.txt  ja.po  messages.mo
linux-sdl/locales/ja_JP/: ja.po  messages.mo
linux-sdl/resource/: CMakeLists.txt  xm7_mani.xml
linux-sdl/resource/F-Font/: CMakeLists.txt  F-Font.txt  Sample.txt
linux-sdl/sdl/: CMakeLists.txt  GtkKbdInterface.cpp  KbdInterface.cpp  KbdInterface.h  Makefile  SDLJoyInterface.cpp  SDLJoyInterface.h  SDLKbdInterface.cpp  SDLKbdInterface.h  SndDrvBeep.cpp  SndDrvBeep.h  SndDrvCMT.cpp  SndDrvCMT.h  SndDrvIF.h  SndDrvOpn.cpp  SndDrvOpn.h  SndDrvTmpl.cpp  SndDrvTmpl.h  SndDrvWav.cpp  SndDrvWav.h  api_draw.cpp  api_draw.cpp.bak  api_draw.h  api_js.cpp  api_js.h  api_kbd.cpp  api_kbd.h  api_mouse.cpp  api_mouse.h  api_scaler.cpp  api_scaler.h  api_snd.cpp  api_snd.h  api_snd2.cpp  api_vram.h  api_vram256k.c  api_vram256k.cpp  api_vram4096.c  api_vram4096.cpp  api_vram8.c  (+26 more)
linux-sdl/sdl/soundbuffer/generic/: CMakeLists.txt  copysoundbuffer.c  makefile
linux-sdl/sdl/soundbuffer/mmx/: CMakeLists.txt  copysoundbuffer.c  makefile
linux-sdl/sdl/soundbuffer/sse2/: CMakeLists.txt  copysoundbuffer.c  makefile
linux-sdl/sdl/vram/generic/: api_vram256k.c  api_vram4096.c  api_vram8.c  api_vramvec.c  makefile
linux-sdl/sdl/vram/sse2/: CMakeLists.txt  api_vram256k.c  api_vram4096.c  api_vram8.c  api_vramvec.c  makefile
linux-sdl/sdl/xm7-win32/: xm7-win32.cbp  xm7-win32.depend  xm7-win32.layout
linux-sdl/ui-agar/: AgarKbdInterface.cpp  AgarKbdInterface.h  CMakeLists.txt  DrawAGNonGL.cpp  DrawAGNonGL.h  agar_cfg.cpp  agar_cfg.h  agar_cmd.cpp  agar_cmd.h  agar_dbg_core.cpp  agar_dbg_disasm.cpp  agar_dbg_fdcdump.cpp  agar_dbg_memdump.cpp  agar_dbg_mmr.cpp  agar_dbg_regdump.cpp  agar_debugger.cpp  agar_debugger.h  agar_draw.cpp  agar_draw.h  agar_glcl.cpp  agar_glcl.h  agar_gldraw.cpp  agar_gldraw.h  agar_gldraw2.cpp  agar_glutil.cpp  agar_glutil.h  agar_gui_input.cpp  agar_gui_menu.cpp  agar_gui_pref.cpp  agar_gui_pref_cl.cpp  agar_gui_pref_disp.cpp  agar_gui_sound.cpp  agar_guicore.cpp  agar_logger.cpp  agar_logger.h  agar_main.cpp  agar_menu_about.cpp  agar_menu_debug.cpp  agar_menu_disk.cpp  agar_menu_help.cpp  (+48 more)
linux-sdl/ui-agar/scaler/generic/: makefile  scaler_x05.c  scaler_x1.c  scaler_x2.c  scaler_x4.c
linux-sdl/ui-agar/scaler/sse2/: CMakeLists.txt  makefile  scaler_x1_sse2.c  scaler_x225_sse2.c  scaler_x25_sse2.c  scaler_x2_sse2.c  scaler_x3_sse2.c  scaler_x45_sse2.c  scaler_x4_sse2.c  scaler_x5_sse2.c
linux-sdl/ui-agar/xm7-win32-ui-agar/: xm7-win32-ui-agar.cbp  xm7-win32-ui-agar.depend  xm7-win32-ui-agar.layout
linux-sdl/vm/: CMakeLists.txt  aluline.c  aluline.h  apalet.c  apalet.h  bubble.c  bubble.h  device.h  disasm.c  display.c  display.h  dmac.c  dmac.h  event.h  fdc.c  fdc.h  fmgen.cpp  fmgen.h  jcard.c  jcard.h  jsubsys.c  jsubsys.h  juliet.cpp  juliet.h  kanji.c  kanji.h  keyboard.c  keyboard.h  l4font.h  m6809.c  m6809.c.old  m6809ops.h  m6809tbl.h  main.c  maincpu.c  mainetc.c  mainetc.c.orig  mainetc.h  mainmem.c  makefile  (+34 more)
linux-sdl/vm/xm7-win32-vm/: xm7-win32-vm.cbp  xm7-win32-vm.layout
linux-sdl/xm7-debugger/: CMakeLists.txt  dbg_breakpoint.cpp  dbg_disasm09.cpp  dbg_fonts.cpp  dbg_memdump.cpp  makefile  memaccess.cpp  memdef.h  memread.h  xm7-debugger.cbp  xm7-debugger.layout
linux-sdl/xm7-debugger/xm7-debugger-win32/: xm7-debugger-win32.cbp  xm7-debugger-win32.depend
(+74 files in other folders)
